--- a/style.css
+++ b/style.css
@@ -1,78 +1,193 @@
-*{margin: 0; padding: 0; }
-#bloco-tudo-site{
-    width: 100%;
-    height: 100vh;
+/* css geral*/
+*{margin: 0; padding: 0; box-sizing:border-box;}
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+/************/
+
+
+/*csas do body*/
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#f3f4f8;   
-}
+    height: 100vh;
+    
 
-#bloco-envolve{
+    
+}
+/***/
+
+
+/* bloco geral do site */
+ #bloco-tudo{
+    width: 700px;
+    height: 491px;
     display: flex;
-    width: 50%
-}
-
-#bloco-tudo-form{
-    width: 50%;
-    height: 100%;
-    margin-right: 15px;
-    border: 1px solid white;
-    background-color: white;
-    border-radius: 10px;
-}
-#logo{
-    width: 40%;
-    margin: 0 auto;
-    display: block;
-}
-
-
-#formulario{
-    width: 80%;
-    height: 50%;
-    overflow: hidden;
-    margin: 40px auto;
-
-}
-#bloco-tudo-email{
-    width: 50%;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
     align-items: center;
+    flex-wrap: wrap;
+    
+   
+ } 
+/************/
+
+/*referente a o bloco do formulario*/
+#bloco-form-tudo{
+    width: 70%;
+    height: 491px;
+    background-color: white;
     border-radius: 10px;
+    box-shadow: 2px 1px 11px 0px rgba(0,0,0,0.54);
+    -webkit-box-shadow: 2px 1px 11px 0px rgba(0,0,0,0.54);
+    -moz-box-shadow: 2px 1px 11px 0px rgba(0,0,0,0.54);
+
+
+    background: rgb(10,197,212);
+    background: -moz-linear-gradient(-45deg, rgba(10,197,212,1) 0%, rgba(16,179,196,1) 50%, rgba(54,149,194,1) 100%);
+    background: -webkit-linear-gradient(-45deg, rgba(10,197,212,1) 0%, rgba(16,179,196,1) 50%, rgba(54,149,194,1) 100%);
+    background: linear-gradient(135deg, rgba(10,197,212,1) 0%, rgba(16,179,196,1) 50%, rgba(54,149,194,1) 100%);
+
+
 }
-#bloco-tudo-email>img{
-    width: 100%;
+#bloco-form{
+    width: 300px;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
 }
-.assinatura{
+#form{
+    width: 90%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    
+}
+
+#form label{
+    font-size: 12px;
+    font-weight: bold;
+    color:white;
+    margin:4px 0;
+    font-family: 'Roboto', sans-serif;
+}
+.input{
     width: 100%;
+    height: 30px;
+    padding-left:3px;
+    color: #353535;
+    font-weight: bold;
+    background: #F2F3F6;
+    border: 1px solid white;
+}
+.bloco-input-duplo{
+    display: flex;
+    grid-gap: 5px 8px;
+    margin:4px 0;
+}
+.duplo-input{
     display: flex;
     flex-direction: column;
 }
-.div-info{
+.duplo-input>input{
     width: 100%;
+    width: 100%;
+    padding-left:3px ;
+    height: 30px;
+    color: #353535;
+    font-weight: bold;
+    background: #F2F3F6;
+    border: 1px solid white;
+}
+
+.duplo-input>select{
+    width: 100%;
+    font-size: 10px;
+    
+}
+.btn{
+    width: 90%;
+    height: 40px;
+    font-size: 15px;
+    margin: 30px auto;
+    border: 1px solid white;
+    border-radius: 10px;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    background-color:#0ABECD;
+   
+}
+/************/
+
+
+/*referente a o bloco da assiantura*/
+.bloco-assi-tudo{
+    width: 50%;
+    height: 230px;
+    margin-left: -20%;
+    border-radius: 10px;
+    overflow: hidden;
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: white;
+    box-shadow: 2px 1px 11px 0px rgba(0,0,0,0.54);
+    -webkit-box-shadow: 2px 1px 11px 0px rgba(0,0,0,0.54);
+    -moz-box-shadow: 2px 1px 11px 0px rgba(0,0,0,0.54);
 }
-#foto{
-    width: 35%;
-    height: 180px;
+.isis-retrato{
+    width: 100%;
+    height: 50px;
+    overflow: hidden;
+   
 }
+#assi-corpo{
+    width: 100%;
+    height: 130px;
+    display: flex;
+    justify-content: center;   
+    align-items: center;
+}
+
+.isis-retrato>img{
+    width: 100%;
+    height: 50px;
+}
+
+
+#foto-fun{
+    width: 83px;
+    height: 90px;
+    margin-right: 10px;
+    overflow: hidden;
+    border-radius: 10px;   
+    
+}
+#foto-fun>img{
+    width: 100%;
+    height: 100%;
+   
+}
+
 #texto{
-    width: 65%;
-    padding-left: 10px;
-}
-#texto>h3{
-    font-size: 20px;
-    color: black;
-    padding-bottom: 10px;
-    text-transform: capitalize;
-    border-bottom: 0.3px solid grey ;
+    width: 210px;
+    height:90px ;
 }
 #texto>p{
-    margin: 1px 0;
-    color: black;
+    font-size: 12px;
+    font-weight: bold;
+    color: grey;
 }
+#texto>h3{
+   
+    font-size: 15px;
+    margin-bottom: 5px;
+    padding-bottom: 3px;
+    border-bottom: 0.5px solid rgb(206, 205, 205);
+}
+
+/************/
+
+
+
