--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background: url(fotos/grid.png), linear-gradient(to right, rgba(0, 126, 174, .85), rgba(26, 193, 187, .85));
     
 
     
@@ -124,7 +125,7 @@ body{
 /*referente a o bloco da assiantura*/
 .bloco-assi-tudo{
     width: 50%;
-    height: 230px;
+    height: 200px;
     margin-left: -20%;
     border-radius: 10px;
     overflow: hidden;
@@ -142,9 +143,9 @@ body{
     overflow: hidden;
    
 }
-#assi-corpo{
+.assi-corpo{
     width: 100%;
-    height: 130px;
+    height: 120px;
     display: flex;
     justify-content: center;   
     align-items: center;
